--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-git add...
+# Local .terraform directories and files
+**/.terraform/*
+.terraform*
+.ignore/*
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# own secret vars store.
+personal.auto.tfvars
