--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@
 # .tfstate files
 *.tfstate
 *.tfstate.*
-./.idea/*
-./.vscode/*
-./Old_practice/*
+.idea/*
+.vscode/*
+Old_practice/*
 # own secret vars store.
 personal.auto.tfvars
